[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
streamlit = "^1.7.0"
bs4 = "^0.0.1"
requests = "^2.27.1"
schoolopy = "^0.2.2"
streamlit-multipage = "^0.0.18"
extra-streamlit-components = "^0.1.53"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"